--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     
     <nav>
         <ul>
-            <li><a href="galeria.html" class="tabela">Galeria</a></li>
-            <li><a href="encomendas.html" class="tabela">Encomendas</a></li>
-            <li><a href="sobre_nos.html" class="tabela">Sobre Nós</a></li>
+            <li><a href="TCC/galeria.html" class="tabela">Galeria</a></li>
+            <li><a href="TCC/encomendas.html" class="tabela">Encomendas</a></li>
+            <li><a href="TCC/sobre_nos.html" class="tabela">Sobre Nós</a></li>
         </ul>
     </nav>
 
