--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GS Artes</title>
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="TCC/estilo/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 </head>
 <body>
@@ -94,6 +94,6 @@
    <center><footer style="background-color: black; color: white; margin-left: -30px; margin-right: -30px; margin-bottom: -10px; margin-bottom: -15px;">&copy; Copyright 2024 - Time TCC</footer></center>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-<script src="js/back_slides.js"></script>
-<script src="js/back_estilo.js"></script>
+<script src="TCC/js/back_slides.js"></script>
+<script src="TCC/js/back_estilo.js"></script>
 </html>
