--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                     <!-- Slides -->
                 <div class="swiper-slide">
                     <div class="p_img">
-                        <img src="slides/slide_1.jpeg">
+                        <img src="TCC/slides/slide_1.jpeg">
                     </div>    
                 </div>
         
                 <div class="swiper-slide">
                     <div class="p_img">
-                        <img src="slides/slide_2.jpeg"/>
+                        <img src="TCC/slides/slide_2.jpeg"/>
                     </div>    
                 </div>
                 
