--- a/encomendas.html
+++ b/encomendas.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/import.css">
     <title>Document</title>
+    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="encomendas.css">
+
 </head>
 <body>
-     <header>
-    <h1 id="titulo"><a href="index.html" class="cabecalho">GS Artes</a></h1>
+    
+    <header id="titulo">
+        <h1><a href="index.html" class="cabecalho">GS Artes</a></h1>
+    </header>
     <hr>
+
+    
     <nav>
         <ul>
             <li><a href="galeria.html" class="tabela">Galeria</a></li>
@@ -19,6 +25,9 @@
     </nav>
     <hr>
 <br>
+
+<h2>Encomendas</h2>
+
 </header>
 <div class="conteudo">
     <div class="container">
@@ -74,5 +83,6 @@
 </div>
 </div>
 </div>
+
 </body>
 </html>
