--- a/galeria.html
+++ b/galeria.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilo/layout.css">
-    <link rel="stylesheet" href="estilo/encomendas.css">
+    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="galeria.css">
 
 </head>
 <body>
     
-    <h1 id="titulo"><a href="index.html" class="cabecalho">GS Artes</a></h1>
+    <header id="titulo">
+        <h1><a href="index.html" class="cabecalho">GS Artes</a></h1>
+    </header>
     <hr>
 
     
@@ -24,7 +26,7 @@
     <hr>
 <br>
 
-<h2>Encomendas</h2>
+<h2>Galeria</h2>
 
 </body>
 </html>
