--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo/sobre_nos.css">
-    <link rel="stylesheet" href="estilo/layout.css">
+    <link rel="stylesheet" href="sobre_nos.css">
+    <link rel="stylesheet" href="layout.css">
 
     <title>Sobre Nós - GS Artes</title>
 
 </head>
 <body>
-    <h1 id="titulo"><a href="index.html" class="cabecalho">GS Artes</a></h1>
+    <header id="titulo">
+        <h1><a href="index.html" class="cabecalho">GS Artes</a></h1>
+    </header>
     <hr>
 
     
@@ -23,6 +25,7 @@
     </nav>
 
     <hr>
+    <br>
 
     <h2>Sobre Nós</h2>
 
