--- a/encomendas.html
+++ b/encomendas.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="TCC/estilo/encomendas.css">
     <title>Document</title>
-    <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="encomendas.css">
-
 </head>
 <body>
-    
-    <header id="titulo">
-        <h1><a href="index.html" class="cabecalho">GS Artes</a></h1>
-    </header>
+     <header>
+    <h1 id="titulo"><a href="index.html" class="cabecalho">GS Artes</a></h1>
     <hr>
-
-    
     <nav>
         <ul>
             <li><a href="galeria.html" class="tabela">Galeria</a></li>
@@ -25,15 +19,12 @@
     </nav>
     <hr>
 <br>
-
-<h2>Encomendas</h2>
-
 </header>
 <div class="conteudo">
     <div class="container">
     <!-- Retrato Realista A4 -->
     <div class="product-section">
-        <img src="img/file-NTk0tEBsYDzd9YDyfj2rjCcS.jpeg" alt="Exemplo de Retrato Realista A4">
+        <img src="TCC/img/file-NTk0tEBsYDzd9YDyfj2rjCcS.jpeg" alt="Exemplo de Retrato Realista A4">
         <div>
             <h2>Retrato Realista em A4</h2>
             <p>Detalhes e precisão em um formato A4, ideal para retratos individuais ou de casal.</p>
@@ -44,7 +35,7 @@
 
     <!-- Retrato Realista A3 -->
     <div class="product-section">
-        <img src="img/file-WirdUqwXf3Yy8RnPDQDRYE9R.jpeg" alt="Exemplo de Retrato Realista A3">
+        <img src="TCC/img/file-WirdUqwXf3Yy8RnPDQDRYE9R.jpeg" alt="Exemplo de Retrato Realista A3">
         <div>
             <h2>Retrato Realista em A3</h2>
             <p>Um retrato de impacto, em tamanho maior, que valoriza cada detalhe artístico.</p>
@@ -55,7 +46,7 @@
 
     <!-- Desenho Lineart A4 -->
     <div class="product-section">
-        <img src="img/IMG-20241031-WA0019.jpg" alt="Exemplo de Desenho Lineart A4">
+        <img src="TCC/img/IMG-20241031-WA0019.jpg" alt="Exemplo de Desenho Lineart A4">
         <div>
             <h2>Desenho Lineart em A4</h2>
             <p>Linhas artísticas e minimalistas, perfeitas para um toque de simplicidade sofisticada.</p>
@@ -65,7 +56,7 @@
 
     <!-- Desenho Lineart A3 -->
     <div class="product-section">
-        <img src="img/IMG-20241031-WA0018.jpg" alt="Exemplo de Desenho Lineart A3">
+        <img src="TCC/img/IMG-20241031-WA0018.jpg" alt="Exemplo de Desenho Lineart A3">
         <div>
             <h2>Desenho Lineart em A3</h2>
             <p>Para quem aprecia linhas expressivas em um formato de destaque.</p>
@@ -83,6 +74,5 @@
 </div>
 </div>
 </div>
-
 </body>
 </html>
