--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sobre_nos.css">
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="TCC/estilo/sobre_nos.css">
+    <link rel="stylesheet" href="TCC/estilo/layout.css">
 
     <title>Sobre Nós - GS Artes</title>
 
