--- a/galeria.html
+++ b/galeria.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="galeria.css">
+    <link rel="stylesheet" href="TCC/estilo/layout.css">
+    <link rel="stylesheet" href="TCC/estilo/galeria.css">
 
 </head>
 <body>
