--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </button>
         <ul class="cima">
             <li><a href="galeria.html" class="topo">Galeria</a></li>
-            <li><a href="emcomendas.html" class="topo">Emcomendas</a></li>
+            <li><a href="encomendas.html" class="topo">Encomendas</a></li>
             <li><a href="sobre-nos.html" class="topo">Sobre nos</a></li>
         </ul>
     </div>
