--- a/galeria.html
+++ b/galeria.html
@@ -25,7 +25,7 @@
             </button>
             <ul class="cima">
                 <li><a href="index.html" class="topo">Inicio</a></li>
-                <li><a href="emcomendas.html" class="topo">Emcomendas</a></li>
+                <li><a href="encomendas.html" class="topo">Encomendas</a></li>
                 <li><a href="sobre-nos.html" class="topo">Sobre nos</a></li>
             </ul>
         </div>
