--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -26,7 +26,7 @@
                 </button>
                 <ul class="cima">
                     <li><a href="galeria.html" class="topo">Galeria</a></li>
-                    <li><a href="emcomendas.html" class="topo">Emcomendas</a></li>
+                    <li><a href="encomendas.html" class="topo">Encomendas</a></li>
                     <li><a href="index.html" class="topo">Inicio</a></li>
                 </ul>
             </div>
