--- a/encomendas.html
+++ b/encomendas.html
@@ -11,7 +11,7 @@
         <header>
             <a href="index.html">
                 <div class="img-logo">
-                    <img src="img/banners/GS Artes Banners4.jpg" class="banner">
+                    <img src="img/GSbanner.jpg" class="banner">
                     <img src="img/GS Artes Banner de Site1.png" class="logo">
                     <img src="img/texto-mobile.png" class="logo-mobile">
                 </div>
