--- a/index.html
+++ b/index.html
@@ -79,16 +79,41 @@
 </p>
 
 <!-- Imagens -->
- <div class="content-img">
-    <div class="container">
-        <img src="https://http2.mlstatic.com/D_NQ_NP_943606-MLB41794229280_052020-O.webp" class="imgs">
+ 
+<div class="content-cards">
+    <div class="card">
+        <div class="card-image">
+            <img src="img/kratos.jpg" alt="">
+        </div>
+        <div class="text">
+            <h3>Kratos</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, eos? Soluta sed laboriosam ab tempore
+                asperiores quas debitis nam, repellendus rem doloremque quasi beatae quae eligendi delectus.
+                Possimus, quasi aut!</p>
+        </div>
     </div>
-    <div class="container">
-        <img src="img/kratos.jpg" class="imgs">
+    <div class="card">
+        <div class="card-image">
+            <img src="img/kratos.jpg" alt="">
+        </div>
+        <div class="text">
+            <h3>Kratos</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, eos? Soluta sed laboriosam ab tempore
+                asperiores quas debitis nam, repellendus rem doloremque quasi beatae quae eligendi delectus.
+                Possimus, quasi aut!</p>
+        </div>
     </div>
-    <div class="container">
-        <img src="https://pm1.aminoapps.com/8672/ab65c7944b401dfa210fbff58b2fe383ca534913r1-1547-1557v2_hq.jpg" class="imgs">
+    <div class="card">
+        <div class="card-image">
+            <img src="img/kratos.jpg" alt="">
+        </div>
+        <div class="text">
+            <h3>Kratos</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, eos? Soluta sed laboriosam ab tempore
+                asperiores quas debitis nam, repellendus rem doloremque quasi beatae quae eligendi delectus.
+                Possimus, quasi aut!</p>
+        </div>
     </div>
- </div>
+</div>
 </body>
 </html>
