nome das imagens e imagem no fundo de sobre nós

--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -36,6 +36,7 @@
             <!-- Sobre Nós -->
             <h2>Sobre Nós</h2>
 
+            <div class="fundo">
             <div class="content">
               
                 <p>
@@ -47,6 +48,7 @@
                 <p>
                     Na GS Artes, o processo de criação é totalmente artesanal e feito com dedicação, destacando-se pela qualidade e autenticidade que tornam cada retrato único e cheio de significado.
                 </p>
+            </div>
             </div>
 </body>
 </html>
