--- a/encomendas.html
+++ b/encomendas.html
@@ -39,7 +39,7 @@
     <div class="container">
     <!-- Retrato Realista A4 -->
     <div class="product-section">
-        <img src="img/file-NTk0tEBsYDzd9YDyfj2rjCcS.jpeg" alt="Exemplo de Retrato Realista A4">
+        <img src="img/retrato-a4.jpeg" alt="Exemplo de Retrato Realista A4">
         <div>
             <h2>Retrato Realista em A4</h2>
             <p>Detalhes e precisão em um formato A4, ideal para retratos individuais ou de casal.</p>
@@ -50,7 +50,7 @@
 
     <!-- Retrato Realista A3 -->
     <div class="product-section">
-        <img src="img/file-WirdUqwXf3Yy8RnPDQDRYE9R.jpeg" alt="Exemplo de Retrato Realista A3">
+        <img src="img/retrato-a3.jpeg" alt="Exemplo de Retrato Realista A3">
         <div>
             <h2>Retrato Realista em A3</h2>
             <p>Um retrato de impacto, em tamanho maior, que valoriza cada detalhe artístico.</p>
@@ -61,7 +61,7 @@
 
     <!-- Desenho Lineart A4 -->
     <div class="product-section">
-        <img src="img/IMG-20241031-WA0019.jpg" alt="Exemplo de Desenho Lineart A4">
+        <img src="img/desenho-a4.jpg" alt="Exemplo de Desenho Lineart A4">
         <div>
             <h2>Desenho Lineart em A4</h2>
             <p>Linhas artísticas e minimalistas, perfeitas para um toque de simplicidade sofisticada.</p>
@@ -71,7 +71,7 @@
 
     <!-- Desenho Lineart A3 -->
     <div class="product-section">
-        <img src="img/IMG-20241031-WA0018.jpg" alt="Exemplo de Desenho Lineart A3">
+        <img src="img/desenho-a3.jpg" alt="Exemplo de Desenho Lineart A3">
         <div>
             <h2>Desenho Lineart em A3</h2>
             <p>Para quem aprecia linhas expressivas em um formato de destaque.</p>
