--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div class="content-cards">
     <div class="card">
         <div class="card-image">
-            <img src="img/kratos.jpg" alt="">
+            <img src="img/index/kratos.jpg" alt="">
         </div>
         <div class="text">
             <h3>Kratos</h3>
@@ -94,7 +94,7 @@
     </div>
     <div class="card">
         <div class="card-image">
-            <img src="img/kratos.jpg" alt="">
+            <img src="img/index/kratos.jpg" alt="">
         </div>
         <div class="text">
             <h3>Kratos</h3>
@@ -105,7 +105,7 @@
     </div>
     <div class="card">
         <div class="card-image">
-            <img src="img/kratos.jpg" alt="">
+            <img src="img/index/kratos.jpg" alt="">
         </div>
         <div class="text">
             <h3>Kratos</h3>
