--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="slide-list" data-slide="list">
             <div class="slide-item" data-slide="item" data-index="0">
                 <div class="slide-content">
-                    <img class="slide-image" src="style/slides/slide_1.jpeg" alt="Assassin's Creed" />
+                    <img class="slide-image" src="./img/slides/slide_1.jpeg" alt="Assassin's Creed" />
                     <div class="slide-description">
                         <h3>Desenho 1</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
@@ -48,7 +48,7 @@
             </div>
             <div class="slide-item" data-slide="item" data-index="1">
                 <div class="slide-content">
-                    <img class="slide-image" src="style/slides/slide_2.jpeg" alt="Fortnite" />
+                    <img class="slide-image" src="./img/slides/slide_2.jpeg" alt="Fortnite" />
                     <div class="slide-description">
                         <h3>Desenho 2</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
