--- a/encomendas.html
+++ b/encomendas.html
@@ -39,7 +39,7 @@
     <div class="container">
     <!-- Retrato Realista A4 -->
     <div class="product-section">
-        <img src="img/emcomendas/desenho-a4.jpg" alt="Exemplo de Retrato Realista A4">
+        <img src="img/emcomendas/retrato-a4.jpeg" alt="Exemplo de Retrato Realista A4">
         <div>
             <h2>Retrato Realista em A4</h2>
             <p>Detalhes e precisão em um formato A4, ideal para retratos individuais ou de casal.</p>
