--- a/index.html
+++ b/index.html
@@ -83,35 +83,26 @@
 <div class="content-cards">
     <div class="card">
         <div class="card-image">
-            <img src="img/index/kratos.jpg" alt="">
+            <img src="img/index/img1.jpeg" alt="">
         </div>
         <div class="text">
-            <h3>Kratos</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, eos? Soluta sed laboriosam ab tempore
-                asperiores quas debitis nam, repellendus rem doloremque quasi beatae quae eligendi delectus.
-                Possimus, quasi aut!</p>
+            <p> Arte que captura o espírito em cada traço</p>
         </div>
     </div>
     <div class="card">
         <div class="card-image">
-            <img src="img/index/kratos.jpg" alt="">
+            <img src="img/index/img2.jpeg" alt="">
         </div>
         <div class="text">
-            <h3>Kratos</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, eos? Soluta sed laboriosam ab tempore
-                asperiores quas debitis nam, repellendus rem doloremque quasi beatae quae eligendi delectus.
-                Possimus, quasi aut!</p>
+            <p>Uma peça única, tão singular quanto você</p>
         </div>
     </div>
     <div class="card">
         <div class="card-image">
-            <img src="img/index/kratos.jpg" alt="">
+            <img src="img/index/img3.jpeg" alt="">
         </div>
         <div class="text">
-            <h3>Kratos</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, eos? Soluta sed laboriosam ab tempore
-                asperiores quas debitis nam, repellendus rem doloremque quasi beatae quae eligendi delectus.
-                Possimus, quasi aut!</p>
+            <p>Feito à mão, eternizado no papel</p>
         </div>
     </div>
 </div>
