--- a/galeria.html
+++ b/galeria.html
@@ -26,8 +26,8 @@
             <span id="hamburger"></span>
         </button>
         <ul class="cima">
-            <li><a href="galeria.html" class="topo">Galeria</a></li>
-            <li><a href="index.html" class="topo">Inicio</a></li>
+            <li><a href="galeria.html" class="topo open">Galeria</a></li>
+            <li><a href="encomendas.html" class="topo">Inicio</a></li>
             <li><a href="sobre-nos.html" class="topo">Sobre nos</a></li>
         </ul>
     </div>
