--- a/galeria.html
+++ b/galeria.html
@@ -27,7 +27,7 @@
         </button>
         <ul class="cima">
             <li><a href="galeria.html" class="topo open">Galeria</a></li>
-            <li><a href="encomendas.html" class="topo">Inicio</a></li>
+            <li><a href="encomendas.html" class="topo">Encomendas</a></li>
             <li><a href="sobre-nos.html" class="topo">Sobre nos</a></li>
         </ul>
     </div>
