--- a/galeria.html
+++ b/galeria.html
@@ -37,16 +37,16 @@
 <h2>Galeria</h2>
 
 <div class="conteudo">
-<img src="img/img1.jpeg" alt="Mulher" class="imagens">
-<img src="img/img2.jpeg" alt="Crianca" class="imagens">
-<img src="img/img3.jpeg" alt="Guilherme" class="imagens">
-<img src="img/img4.jpeg" alt="Homem" class="imagens">
-<img src="img/img5.jpeg" alt="Chris Evans" class="imagens">
-<img src="img/img6.jpeg" alt="Bebe" class="imagens">
-<img src="img/img7.jpeg" alt="Crianca" class="imagens">
-<img src="img/img8.jpeg" alt="Quadro 1" class="imagens">
-<img src="img/img9.jpeg" alt="Quadro 2" class="imagens">
-<img src="img/img10.jpeg" alt="Quadro 3" class="imagens">
+<img src="img/galeria/img1.jpeg" alt="Mulher" class="imagens">
+<img src="img/galeria/img2.jpeg" alt="Crianca" class="imagens">
+<img src="img/galeria/img3.jpeg" alt="Guilherme" class="imagens">
+<img src="img/galeria/img4.jpeg" alt="Homem" class="imagens">
+<img src="img/galeria/img5.jpeg" alt="Chris Evans" class="imagens">
+<img src="img/galeria/img6.jpeg" alt="Bebe" class="imagens">
+<img src="img/galeria/img7.jpeg" alt="Crianca" class="imagens">
+<img src="img/galeria/img8.jpeg" alt="Quadro 1" class="imagens">
+<img src="img/galeria/img9.jpeg" alt="Quadro 2" class="imagens">
+<img src="img/galeria/img10.jpeg" alt="Quadro 3" class="imagens">
 </div>
 
 </body>
