--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="cima">
             <li><a href="galeria.html" class="topo">Galeria</a></li>
             <li><a href="encomendas.html" class="topo">Encomendas</a></li>
-            <li><a href="sobre-nos.html" class="topo">Sobre nos</a></li>
+            <li><a href="sobre-nos.html" class="topo">Sobre Nós</a></li>
         </ul>
     </div>
     </nav>
