--- a/encomendas.html
+++ b/encomendas.html
@@ -26,8 +26,8 @@
             </button>
             <ul class="cima">
                 <li><a href="galeria.html" class="topo">Galeria</a></li>
-                <li><a href="index.html" class="topo">Inicio</a></li>
-                <li><a href="sobre-nos.html" class="topo">Sobre nos</a></li>
+                <li><a href="index.html" class="topo open">Encomendas</a></li>
+                <li><a href="sobre-nos.html" class="topo">Sobre Nós</a></li>
             </ul>
         </div>
         </nav>
