--- a/galeria.html
+++ b/galeria.html
@@ -26,9 +26,9 @@
             <span id="hamburger"></span>
         </button>
         <ul class="cima">
-            <li><a href="galeria.html" class="topo open">Galeria</a></li>
+            <li><a href="index.html" class="topo open">Galeria</a></li>
             <li><a href="encomendas.html" class="topo">Encomendas</a></li>
-            <li><a href="sobre-nos.html" class="topo">Sobre nos</a></li>
+            <li><a href="sobre-nos.html" class="topo">Sobre Nós</a></li>
         </ul>
     </div>
     </nav>
