--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -27,7 +27,7 @@
                 <ul class="cima">
                     <li><a href="galeria.html" class="topo">Galeria</a></li>
                     <li><a href="encomendas.html" class="topo">Encomendas</a></li>
-                    <li><a href="index.html" class="topo">Inicio</a></li>
+                    <li><a href="index.html" class="topo open">Sobre Nós</a></li>
                 </ul>
             </div>
             </nav>
