--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
             <img src="img/index/img1.jpeg" alt="">
         </div>
         <div class="text">
-            <p> Arte que captura o espírito em cada traço</p>
+            <h3> Arte</h3>
+            <p> que captura o espírito em cada traço</p>
         </div>
     </div>
     <div class="card">
@@ -94,7 +95,8 @@
             <img src="img/index/img2.jpeg" alt="">
         </div>
         <div class="text">
-            <p>Uma peça única, tão singular quanto você</p>
+            <h3>Uma peça</h3>
+            <p> única, tão singular quanto você</p>
         </div>
     </div>
     <div class="card">
@@ -102,7 +104,8 @@
             <img src="img/index/img3.jpeg" alt="">
         </div>
         <div class="text">
-            <p>Feito à mão, eternizado no papel</p>
+            <h3>Feito à </h3>
+            <p> mão, eternizado no papel</p>
         </div>
     </div>
 </div>
