--- a/encomendas.html
+++ b/encomendas.html
@@ -88,6 +88,7 @@
     </div>
 </div>
 </div>
-</div>
+<script src="https://unpkg.com/scrollreveal"></script>
+<script src="js/encomendas.js"></script>
 </body>
 </html>
