--- a/galeria.html
+++ b/galeria.html
@@ -48,5 +48,7 @@
 <img src="img/galeria/img10.jpeg" alt="Quadro 3" class="imagens">
 </div>
 
+<script src="https://unpkg.com/scrollreveal"></script>
+<script src="js/galeria.js"></script>
 </body>
 </html>
