--- a/index.html
+++ b/index.html
@@ -39,19 +39,14 @@
         <div class="slide-list" data-slide="list">
             <div class="slide-item" data-slide="item" data-index="0">
                 <div class="slide-content">
-                    <img class="slide-image" src="./img/slides/slide_1.jpeg" alt="Assassin's Creed" />
+                    <img class="slide-image" src="./img/slides/slide_1.jpeg" alt="Imagem 1" />
                     <div class="slide-description">
-                        <h3>Desenho 1</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
-                    </div>
                 </div>
             </div>
             <div class="slide-item" data-slide="item" data-index="1">
                 <div class="slide-content">
-                    <img class="slide-image" src="./img/slides/slide_2.jpeg" alt="Fortnite" />
+                    <img class="slide-image" src="./img/slides/slide_2.jpeg" alt="Imagem 2" />
                     <div class="slide-description">
-                        <h3>Desenho 2</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
                     </div>
                 </div>
             </div>
