--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <div class="slide-description">
                 </div>
             </div>
+            </div>
             <div class="slide-item" data-slide="item" data-index="1">
                 <div class="slide-content">
                     <img class="slide-image" src="./img/slides/slide_2.jpeg" alt="Imagem 2" />
