--- a/index.html
+++ b/index.html
@@ -31,41 +31,42 @@
     </nav>
 
    <!-- Slides -->
-    <div id="wrapper">
-   <div class="wrapper">
-    <div class="slide-wrapper" data-slide="wrapper">
-        <button class="slide-nav-button slide-nav-previous fas fa-chevron-left" data-slide="nav-previous-button"></button>
-        <button class="slide-nav-button slide-nav-next fas fa-chevron-right" data-slide="nav-next-button"></button>
-        <div class="slide-list" data-slide="list">
-            <div class="slide-item" data-slide="item" data-index="0">
-                <div class="slide-content">
-                    <img class="slide-image" src="./img/slides/slide_1.jpeg" alt="Imagem 1" />
-                    <div class="slide-description">
-                </div>
-            </div>
-            </div>
-            <div class="slide-item" data-slide="item" data-index="1">
-                <div class="slide-content">
-                    <img class="slide-image" src="./img/slides/slide_2.jpeg" alt="Imagem 2" />
-                    <div class="slide-description">
-                    </div>
-                </div>
-            </div>
+   <div id="wrapper">
+    <div class="wrapper">
+     <div class="slide-wrapper" data-slide="wrapper">
+         <button class="slide-nav-button slide-nav-previous fas fa-chevron-left" data-slide="nav-previous-button"></button>
+         <button class="slide-nav-button slide-nav-next fas fa-chevron-right" data-slide="nav-next-button"></button>
+         <div class="slide-list" data-slide="list">
+             <div class="slide-item" data-slide="item" data-index="0">
+                 <div class="slide-content">
+                     <img class="slide-image" src="img/slides/slide_1.jpeg" alt="Assassin's Creed" />
+                     <div class="slide-description">
+                     </div>
+                 </div>
+             </div>
+             <div class="slide-item" data-slide="item" data-index="1">
+                 <div class="slide-content">
+                     <img class="slide-image" src="img/slides/slide_2.jpeg" alt="Fortnite" />
+                     <div class="slide-description">
  
-        </div>
-        <div class="slide-controls" data-slide="controls-wrapper">
-        </div>
-    </div>
-</div></div>
-    <script src="js/slide.js"></script>
-    <script>
-        initSlider({
-            autoPlay: true,
-            startAtIndex: 0,
-            timeInterval: 2000,
-        });
-    </script>
-<script src="js/index.js"></script>
+                     </div>
+                 </div>
+             </div>
+  
+         </div>
+         <div class="slide-controls" data-slide="controls-wrapper">
+         </div>
+     </div>
+ </div></div>
+     <script src="js/slide.js"></script>
+     <script>
+         initSlider({
+             autoPlay: true,
+             startAtIndex: 0,
+             timeInterval: 2000,
+         });
+     </script>
+ <script src="js/index.js"></script>
 
 <!-- Texto apresentativo -->
 
