--- a/encomendas.html
+++ b/encomendas.html
@@ -45,6 +45,7 @@
             <p>Detalhes e precisão em um formato A4, ideal para retratos individuais ou de casal.</p>
             <p class="price">R$ 30 por rosto</p>
             <p>* O valor é por rosto (por pessoa).</p>
+            <button><a href ="https://wa.me/5511979629?text=Olá, quero fazer uma encomenda de um retrato realista em folha A4" target="_blank">Encomende</a></button>
         </div>
     </div>
 
@@ -56,6 +57,7 @@
             <p>Um retrato de impacto, em tamanho maior, que valoriza cada detalhe artístico.</p>
             <p class="price">R$ 60 por rosto</p>
             <p>* O valor é por rosto (por pessoa).</p>
+            <button><a href ="https://wa.me/5511979629?text=Olá, quero fazer uma encomenda de uma retrato realista em folha A3" target="_blank">Encomende</a></button>
         </div>
     </div>
 
@@ -66,6 +68,7 @@
             <h2>Desenho Lineart em A4</h2>
             <p>Linhas artísticas e minimalistas, perfeitas para um toque de simplicidade sofisticada.</p>
             <p class="price">R$ 20 por rosto</p>
+            <button><a href ="https://wa.me/5511979629?text=Olá, quero fazer uma encomenda de uma lineart em folha A4" target="_blank">Encomende</a></button>
         </div>
     </div>
 
@@ -76,6 +79,7 @@
             <h2>Desenho Lineart em A3</h2>
             <p>Para quem aprecia linhas expressivas em um formato de destaque.</p>
             <p class="price">R$ 40 por rosto</p>
+            <button><a href ="https://wa.me/5511979629?text=Olá, quero fazer uma encomenda de uma lineart em folha A3" target="_blank">Encomende</a></button>
         </div>
     </div>
 
