--- a/galeria.html
+++ b/galeria.html
@@ -36,6 +36,7 @@
     <script src="js/index.js"></script>
 
 <div class="conteudo">
+<img src="img/galeria/img0.jpeg" alt="" class="imagens">
 <img src="img/galeria/img1.jpeg" alt="Mulher" class="imagens">
 <img src="img/galeria/img2.jpeg" alt="Crianca" class="imagens">
 <img src="img/galeria/img3.jpeg" alt="Guilherme" class="imagens">
@@ -46,6 +47,11 @@
 <img src="img/galeria/img8.jpeg" alt="Quadro 1" class="imagens">
 <img src="img/galeria/img9.jpeg" alt="Quadro 2" class="imagens">
 <img src="img/galeria/img10.jpeg" alt="Quadro 3" class="imagens">
+<img src="img/galeria/img11.jpeg" alt="Quadro 3" class="imagens">
+<img src="img/galeria/img12.jpeg" alt="Quadro 3" class="imagens">
+<img src="img/galeria/img13.jpeg" alt="Quadro 3" class="imagens">
+<img src="img/galeria/img14.jpeg" alt="Quadro 3" class="imagens">
+<img src="img/galeria/img15.jpeg" alt="Quadro 3" class="imagens">
 </div>
 
 <script src="https://unpkg.com/scrollreveal"></script>
