--- a/galeria.html
+++ b/galeria.html
@@ -35,6 +35,7 @@
 
     <script src="js/index.js"></script>
 
+    <!-- Galeria  -->
 <div class="conteudo">
 <img src="img/galeria/img0.jpeg" alt="" class="imagens">
 <img src="img/galeria/img1.jpeg" alt="Mulher" class="imagens">
